<resources>
    <string name="app_name">DicodingMovie2</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="releasedate">Release Date</string>
    <string name="durationtime">Duration Time</string>
    <string name="distributedby">Distributed By</string>
    <string name="description">Description</string>
    <string name="content">content</string>
    <string name="detail">Detail :</string>
    <string name="duration">Duration</string>
    <string-array name="movie_titles">
        <item>A Star is Born</item>
        <item>Alita Battle Angel</item>
        <item>Aquaman</item>
        <item>Bohemian Rhapsody</item>
        <item>Cold Pursuit</item>
        <item>Creed II</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Glass</item>
        <item>How To Train Your Dragon</item>
        <item>Infinity War</item>
        <item>Marry Queen</item>
        <item>IP Man - Master Z</item>
        <item>Mortal Engines</item>
        <item>Overlord</item>
        <item>Wreck It Ralph</item>
        <item>Robin Hood</item>
        <item>Serenity</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>T-34</item>
    </string-array>
</resources>